--- a/chaincode/package.json
+++ b/chaincode/package.json
@@ -4,8 +4,43 @@
   "description": "Property Registration Chaincode",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint .",
+    "pretest": "npm run lint",
+    "test": "nyc mocha test --recursive",
+    "start-dev": "fabric-chaincode-node start --peer.address peer0.users.property-registration-network.com:9053 --chaincode-id-name regnet:1.1",
+    "start": "fabric-chaincode-node start",
+    "mocha": "mocha test --recursive"
   },
+  "engineStrict": true,
   "author": "Ankit Kumar",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "fabric-contract-api": "^2.5.2",
+    "fabric-shim": "^2.5.2"
+  },
+  "devDependencies": {
+    "chai": "^4.3.7",
+    "chai-as-promised": "^7.1.1",
+    "eslint": "^8.38.0",
+    "mocha": "^10.2.0",
+    "nyc": "^15.1.0",
+    "sinon": "^15.0.3",
+    "sinon-chai": "^3.7.0"
+  },
+  "nyc": {
+    "exclude": [
+      "coverage/**",
+      "test/**"
+    ],
+    "reporter": [
+      "text-summary",
+      "html"
+    ],
+    "all": true,
+    "check-coverage": true,
+    "statements": 100,
+    "branches": 100,
+    "functions": 100,
+    "lines": 100
+  }
 }
